@@ -243,6 +243,10 @@ int main(int argc, char *argv[])
 		else if (strcmp(argv[argi], "--no-rrd") == 0) {
 			no_rrd = 1;
 		}
+		else if (strcmp(argv[argi], "--cachemultiplier=") == 0) {
+			cacheflushsz = atoi(argv[argi]+18);
+			if (cacheflushsz == 0) cacheflushsz = 1;
+		}
 		else if (net_worker_option(argv[argi])) {
 			/* Handled in the subroutine */
 		}
@@ -252,6 +256,9 @@ int main(int argc, char *argv[])
 	}
 
 	save_errbuf = 0;
+
+	dbgprintf("rrd cache flush multiplier: %d\n", cacheflushsz);
+	cacheflushsz *= CACHESZ;
 
 	if (no_rrd && !processor) errprintf("RRD writing disabled, but no external processor has been specified.\n");
 
@@ -278,6 +285,7 @@ int main(int argc, char *argv[])
 	load_hostnames(xgetenv("HOSTSCFG"), NULL, get_fqdn());
 	load_client_config(NULL);
 	now = gettimer();
+	releasecachedelay = (int)now + 600;
 	reloadtime = now + 600;
 	comboflushtime = now + 23;
 	checkctltime = now + 4;
@@ -347,6 +355,8 @@ int main(int argc, char *argv[])
 		/* See if we have any cache-control messages pending */
 		if ((checkctltime < now) && (ctlsocket != -1)) {
 		    dbgprintf("xymond_rrd: checking for rrdctl flush messages\n");
+		    if (releasecachedelay && (releasecachedelay < (int)now)) releasecachedelay = 0;
+
 		    do {
 			n = recv(ctlsocket, ctlbuf, sizeof(ctlbuf), 0);
 			gotcachectlmessage = (n > 0);
