@@ -184,6 +184,9 @@ xymon (4.4.0-alpha5) unstable; urgency=low
    * xymonnet: DNS lookup failures no longer cause the entire xymonnet status to 
      turn yellow
    * xymond_rrd: The (existing) --processor option is now documented.
+   * xymond_rrd: Delay 10m after start before first flushing of cached values,
+     to prevent out-of-order RRD writes from a previous process being affected.
+
 
  -- Henrik Stoerner <henrik@hswn.dk>  Sun, 22 Nov 2015 18:26:21 +0100
 
