@@ -183,6 +183,8 @@ Changes from 4.3.x -> 4.4-alpha
 * xymonnet: DNS lookup failures no longer cause the entire xymonnet status to 
   turn yellow
 * xymond_rrd: The (existing) --processor option is now documented.
+* xymond_rrd: Delay 10m after start before first flushing of cached values,
+  to prevent out-of-order RRD writes from a previous process being affected.
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
